Adição da rota requisitada em sala e conclusão do projeto. Rota que exibe a quantidade de logins realizados por determinado usuário adicionada, README criado e refatoração das rotas que usam parâmetros e query.
