# controller/albumController.js
@@ -116,7 +116,10 @@ exports.getAlbuns = async(req, res) => {
 }
 */
     try {
-        const {limite, pagina} = req.params
+        const {limite, pagina} = req.query
+
+        if(!limite || !pagina)
+            return res.status(400).send("Verifique se você enviou ambos o limite de entradas (primeiro parâmetro) e a página inicial (segindo parâmetro) na URL")
 
         const limiteEntradas = parseInt(limite); const paginaInicial = parseInt(pagina)
         if(![5, 15, 30].includes(limiteEntradas || paginaInicial <= 0))
@@ -182,7 +185,7 @@ exports.getAlbum = async (req, res) => {
 }
 
 //Função que retorna todos os albuns de um artista específico
-exports.getAlbumByArtista = async (req, res) => {
+exports.getAlbunsByArtista = async (req, res) => {
 /*
 #swagger.tags = ['Álbuns']
 #swagger.summary = 'Retorna todos os álbuns de um artista específico'
@@ -241,8 +244,11 @@ exports.getAlbumByArtista = async (req, res) => {
 }
 */
     try{
-        const {limite, pagina} = req.params
-        const {nomeArtista} = req.query
+        const {limite, pagina} = req.query
+        const {nomeArtista} = req.params
+
+        if(!limite || !pagina)
+            return res.status(400).send("Verifique se você enviou ambos o limite de entradas (primeiro parâmetro) e a página inicial (segindo parâmetro) na URL")
 
         const limiteEntradas = parseInt(limite); const paginaInicial = parseInt(pagina)
         if(![5, 15, 30].includes(limiteEntradas || paginaInicial <= 0))
