# controller/musicaController.js
@@ -119,7 +119,10 @@ exports.getMusicas = async (req, res) => {
 }
 */
     try{
-        const {limite, pagina} = req.params
+        const {limite, pagina} = req.query
+
+        if(!limite || !pagina)
+            return res.status(400).send("Verifique se você enviou ambos o limite de entradas (primeiro parâmetro) e a página inicial (segindo parâmetro) na URL")
 
         const limiteEntradas = parseInt(limite); const paginaInicial = parseInt(pagina)
         if(![5, 15, 30].includes(limiteEntradas || paginaInicial <= 0)){
@@ -243,8 +246,11 @@ exports.getMusicasByArtista = async (req, res) => {
 }
 */
     try{
-        const {limite, pagina} = req.params
-        const {nomeArtista} = req.query
+        const {limite, pagina} = req.query
+        const {nomeArtista} = req.params
+
+        if(!limite || !pagina)
+            return res.status(400).send("Verifique se você enviou ambos o limite de entradas (primeiro parâmetro) e a página inicial (segindo parâmetro) na URL")
 
         const limiteEntradas = parseInt(limite); const paginaInicial = parseInt(pagina)
         if(![5, 15, 30].includes(limiteEntradas || paginaInicial <= 0))
@@ -320,8 +326,11 @@ exports.getMusicaByAlbum = async (req, res) => {
 }
 */
     try{
-        const {limite, pagina} = req.params
-        const {nomeAlbum} = req.query
+        const {limite, pagina} = req.query
+        const {nomeAlbum} = req.params
+
+        if(!limite || !pagina)
+            return res.status(400).send("Verifique se você enviou ambos o limite de entradas (primeiro parâmetro) e a página inicial (segindo parâmetro) na URL")
 
         const limiteEntradas = parseInt(limite); const paginaInicial = parseInt(pagina)
         if(![5, 15, 30].includes(limiteEntradas || paginaInicial <= 0))
