# routes/musicaRoute.js
@@ -5,13 +5,13 @@ const autenticação = require('../middleware/autenticação')
 
 router.post('/createMusica', autenticação, musicaController.createMusica)
 
-router.get('/getMusicas/:limite/:pagina', musicaController.getMusicas)
+router.get('/getMusicas?', musicaController.getMusicas)
 
 router.get('/getMusica/:id', musicaController.getMusica)
 
-router.get('/getMusicasByArtista/:limite/:pagina?', musicaController.getMusicasByArtista)
+router.get('/getMusicasByArtista/:nomeArtista?', musicaController.getMusicasByArtista)
 
-router.get('/getMusicasByAlbum/:limite/:pagina?', musicaController.getMusicaByAlbum)
+router.get('/getMusicasByAlbum/:nomeAlbum?', musicaController.getMusicaByAlbum)
 
 router.put('/updateMusica/:id', autenticação, musicaController.updateMusica)
 
